[tool.poetry]
name = "KitHub"
version = "0.1.0"
description = "KitHub is a powerful framework for creating and managing tool-based APIs. It integrates seamlessly with LangChain tools and provides a simple interface for exposing these tools as API endpoints."
authors = ["Uria Franko <uriafranko@gmail.com>"]
packages = [
    { include = "*", from = "src" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
langchain-core = "^0.2.9"
langchain-community = "^0.2.5"

[tool.poetry.dev-dependencies]
mypy = "1.10.0"
docformatter = "1.7.5"
ruff = "0.4.6"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
backend-path = ["src"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
    "./tests/test_kithub.py"
]
target-version = "py312"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "C4",
    "D200",
    "D201",
    "D204",
    "D205",
    "D206",
    "D210",
    "D211",
    "D213",
    "D300",
    "D400",
    "D402",
    "D403",
    "D404",
    "D419",
    "E",
    "F",
    "G010",
    "I001",
    "INP001",
    "N805",
    "PERF101",
    "PERF102",
    "PERF401",
    "PERF402",
    "PGH004",
    "PGH005",
    "PIE794",
    "PIE796",
    "PIE807",
    "PIE810",
    "RET502",
    "RET503",
    "RET504",
    "RET505",
    "RUF015",
    "RUF100",
    "S101",
    "T20",
    "W",
]

[tool.mypy]
files = ["src"]
strict = true
